# iris

./: .gitignore  .gitmodules  CMakeLists.txt  conanfile.py
examples/: CMakeLists.txt  canny_demo.cpp  gaussian_demo.cpp  gradient_demo.cpp  gray_gaussian_demo.cpp  hough_demo.cpp  level_adjust_demo.cpp  mask_demo.cpp  rotation.cpp  shapes_demo.cpp
examples/chess_demo/: chess_demo.cpp  demo_brain.cpp  demo_brain.h  demo_brain_create_control_frame.cpp  demo_brain_ctor.cpp  demo_brain_display.cpp  demo_brain_display_loop.cpp  demo_brain_load_png.cpp  demo_brain_process.cpp  demo_brain_shutdown.cpp  demo_controls.cpp  demo_controls.h  demo_settings.h  demo_settings_view.cpp  demo_settings_view.h  filters.cpp  filters.h  main_frame.cpp
examples/common/: CMakeLists.txt  about_window.h  brain.h  display_thread.cpp  display_thread.h  gray_png_brain.h  observer.h  png_settings.h  timer.h  user.cpp  user.h
examples/corners_chain_demo/: corners_chain_demo.cpp  demo_settings.h  demo_settings_view.cpp  demo_settings_view.h  filters.cpp  filters.h  main_frame.cpp
examples/lines_chain_demo/: demo_controls.h  demo_settings.h  demo_settings_view.cpp  filters.cpp  filters.h  lines_chain_demo.cpp
examples/vertex_chain_demo/: demo_controls.cpp  demo_settings.h  demo_settings_view.cpp  demo_settings_view.h  filters.cpp  filters.h  main_frame.h  vertex_chain_demo.cpp
iris/: CMakeLists.txt  canny.cpp  canny.h  canny_chain.cpp  canny_chain.h  canny_chain_settings.cpp  canny_chain_settings.h  canny_settings.cpp  canny_settings.h  chess.cpp  chess.h  chess_chain.cpp  chess_chain.h  chess_chain_node_settings.cpp  chess_chain_node_settings.h  chess_chain_results.cpp  chess_chain_results.h  chess_chain_settings.cpp  chess_chain_settings.h  chess_settings.cpp  chess_settings.h  chunks.h  color.cpp  color.h  color_map.cpp  color_map.h  color_settings.cpp  color_settings.h  corner.cpp  corner.h  corner_settings.cpp  corner_settings.h  corners_chain.cpp  corners_chain.h  corners_chain_settings.cpp  corners_chain_settings.h  default.h  derivative.h  ellipse.h  error.h  (+62 more)
iris/chess/: axis_groups.cpp  axis_groups.h  chess_error.h  chess_log.h  chess_solution.cpp  chess_solution.h  find_point.cpp  find_point.h  find_vertex.cpp  find_vertex.h  group_functions.cpp  group_functions.h  groups.h  in_process.h  intersection.cpp  intersection.h  line_collector.cpp  line_collector.h  line_from_points.cpp  line_from_points.h  line_group.cpp  line_group.h  named_vertex.cpp  named_vertex.h
iris/detail/: suppression_detail.h
iris/views/: '  app.h  canny_chain_settings_view.cpp  canny_chain_settings_view.h  canny_settings_view.cpp  canny_settings_view.h  chess_chain_settings_view.cpp  chess_chain_settings_view.h  chess_settings_view.cpp  chess_settings_view.h  chess_shape.cpp  chess_shape.h  chess_shape_view.cpp  chess_shape_view.h  color_settings_view.h  corner_settings_view.cpp  corner_settings_view.h  corners_chain_settings_view.cpp  corners_chain_settings_view.h  data_view.h  data_view_settings.h  defaults.h  detect_settings_view.h  draw_ellipse.h  draw_lines.h  draw_points.cpp  draw_points.h  ellipse_shape.h  ellipse_shape_view.h  ellipse_view.h  gaussian_settings_view.cpp  gaussian_settings_view.h  gradient_settings_view.cpp  gradient_settings_view.h  harris_settings_view.h  homography_settings_view.cpp  homography_settings_view.h  hough_settings_view.h  intrinsics_view.cpp  intrinsics_view.h  (+38 more)
test/: CMakeLists.txt  extrinsics_tests.cpp  gradient_test.cpp  harris_tests.cpp  homography_tests.cpp  intrinsics_tests.cpp  projection_tests.cpp  rotation_tests.cpp  suppression_tests.cpp
